template/deepseek-chat/row_4_update_12_template_20250505_094616.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template to create an Amazon Linux 2 EC2 instance'

Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t3.small
      - t3.medium
    ConstraintDescription: Must be a valid EC2 instance type

  KeyPairName:
    Description: Name of an existing EC2 KeyPair to enable SSH access (leave blank if not needed)
    Type: String
    Default: ""
    ConstraintDescription: Must be the name of an existing EC2 KeyPair or empty

  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

Mappings:
  AWSRegionToAMI:
    us-east-1:
      AMI: ami-0c55b159cbfafe1f0
    us-east-2:
      AMI: ami-0e83be366243f524a
    us-west-1:
      AMI: ami-0f8e81a3da6e2510a
    us-west-2:
      AMI: ami-0d70546e43a941d70
    eu-west-1:
      AMI: ami-0d75513e7706cf2d9
    eu-central-1:
      AMI: ami-0d527b8c289b4af7f
    ap-southeast-1:
      AMI: ami-0b4fdb56a00cd61e6
    ap-southeast-2:
      AMI: ami-0b7dcd6e6fd797935
    ap-northeast-1:
      AMI: ami-0b8b10b5bf11f3a22
    ap-northeast-2:
      AMI: ami-0a0c8eebcdd6dcbd0
    sa-east-1:
      AMI: ami-0faf2c48fc9c8f966

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: MyPublicSubnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  Route:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [AWSRegionToAMI, !Ref 'AWS::Region', AMI]
      InstanceType: !Ref InstanceType
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !GetAtt EC2SecurityGroup.GroupId
          SubnetId: !Ref Subnet
      Tags:
        - Key: Name
          Value: AmazonLinux2Instance
      KeyName: !If [HasKeyPair, !Ref KeyPairName, !Ref "AWS::NoValue"]

Conditions:
  HasKeyPair: !Not [!Equals [!Ref KeyPairName, ""]]

Outputs:
  InstanceId:
    Description: Instance ID of the newly created EC2 instance
    Value: !Ref EC2Instance
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
  SecurityGroupId:
    Description: Security group ID of the instance
    Value: !GetAtt EC2SecurityGroup.GroupId
